[package]
name = "shuffler"
version = "0.1.0"
authors = ["Rohit Narurkar <rohit.narurkar@protonmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen", "full"] }
rand = "0.7.3"
rand_chacha = "0.2.2"
rand_core = "0.5.1"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
tokio = { version = "0.2.22", features = ["rt-core", "macros"] }
